<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructions">

        <TableLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCourse1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingRight="16dp"
                    android:text="Course 1:" />

                <EditText
                    android:id="@+id/editTextNumberDecimalCourse1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@string/grade_size"
                    android:hint="@string/grade_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCourse2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingRight="16dp"
                    android:text="Course 2:" />

                <EditText
                    android:id="@+id/editTextNumberDecimalCourse2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@string/grade_size"
                    android:hint="@string/grade_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCourse3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingRight="16dp"
                    android:text="Course 3:" />

                <EditText
                    android:id="@+id/editTextNumberDecimalCourse3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@string/grade_size"
                    android:hint="@string/grade_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCourse4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingRight="16dp"
                    android:text="Course 4:" />

                <EditText
                    android:id="@+id/editTextNumberDecimalCourse4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@string/grade_size"
                    android:hint="@string/grade_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCourse5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingRight="16dp"
                    android:text="Course 5:" />

                <EditText
                    android:id="@+id/editTextNumberDecimalCourse5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@string/grade_size"
                    android:hint="@string/grade_hint"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_default"
        android:onClick="buttonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_output"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalc" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>